# Week3_projects

./: README.md  main.py  pyproject.toml
P1/: Date_Fruit_Datasets.ipynb
P2/: Aqar_dataset.ipynb
P3/: penguins.ipynb
