[project]
name = "week3-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.13",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.8.0",
]
